--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "start:local": "TZ=UTC NODE_ENV=local \"nodemon\"",
         "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && jest",
         "lint": "npx eslint $(git diff --name-only --diff-filter=ACMRTUXB origin/develop -- ./src)",
-        "lint:fix": "npx eslint $(git diff --name-only --diff-filter=ACMRTUXB origin/develop -- ./src) --fix"
+        "lint:fix": "npx eslint $(git diff --name-only --diff-filter=ACMRTUXB origin/develop -- ./src) --fix",
+        "build": "rimraf dist && npx babel src --out-dir dist/src --extensions \".ts,.tsx\"  --source-maps --copy-files"
     },
     "repository": {
         "type": "git",
@@ -49,6 +50,10 @@
         "@babel/plugin-proposal-decorators": "^7.22.3",
         "@babel/preset-env": "^7.21.5",
         "@babel/preset-typescript": "^7.21.5",
+        "@types/compression": "^1.7.2",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/express": "^4.17.17",
+        "@types/morgan": "^1.9.5",
         "babel-plugin-parameter-decorator": "^1.0.16",
         "dotenv": "^16.0.0",
         "eslint": "^8.40.0",
@@ -61,6 +66,9 @@
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^27.5.1",
         "jest-junit": "^13.0.0",
-        "jest-sonar-reporter": "^2.0.0"
+        "jest-sonar-reporter": "^2.0.0",
+        "ts-jest": "^27.1.5",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.3"
     }
 }
